test/errors/func5.qk

#OUTPUT
#Syntax Error: Arguments should have a colon between name and type.
# -> [12] func add_two(x:int, yint)
#
#END

#RET 1

extern func printf(s:str, ...)

func add_two(x:int, yint)
    x = x + y
end

func main -> int
    return 0
end

